my first commit

--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Baraka Cohort-About</title>
 </head>
 <body>
      <div>
-    <a href="">Home</a>
-     <a href="contact-us.html">Contact Us</a>
+    <a href="index.html">Home</a>
+     <a href="/contact-us.html">Contact Us</a>
       <a href="about.html">About Us</a>
    </div> 
    <h1>About Us</h1>
