--- a/contact-us.html
+++ b/contact-us.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Baraka Cohort-About</title>
 </head>
 <body>
   <div>
-    <a href="">Home</a>
+    <a href="index.html">Home</a>
      <a href="contact-us.html">Contact Us</a>
       <a href="about.html">About Us</a>
    </div>  
