--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baraka Cohort-About</title>
+<style>
+    .nav {
+background-color: aqua;
+height: 100px;
+margin-top: 0px;
+margin-bottom: 0px;
+padding-left: 10px;
+margin-bottom: 0px;
+
+    }
+</style>
 </head>
 <body>
-   <div>
-    <a href="index.html">/Home</a>
+   <div style="background-color: gray; text-align: center; height: 100px;">
+    <a href="index.html">Home</a>
      <a href="contact-us.html">Contact Us</a>
       <a href="about.html">About Us</a>
    </div> 
-   <h1>Home</h1>
+   
+   <div style="background-color: gray; height: 100px;">
+<h1 style="color: red; background-color: aqua; padding-top: 10px; font-family: 'Courier New', Courier, monospace;">Home</h1>
+   </div>
+   
 </body>
 </html>
